--- a/playbooks/enforce_pom.yml
+++ b/playbooks/enforce_pom.yml
@@ -61,6 +61,7 @@
           sample: "{{ (deps_desired | dict2items)[:5] }}"
 
   roles:
-    - pom_reader
-    # - pom_project_updater
+    - { role: pom_reader, tags: ['pom_reader'] }
+    - pom_project_updater
     - pom_deps_updater
+
