--- a/fixtures/sample_proj/pom.xml
+++ b/fixtures/sample_proj/pom.xml
@@ -6,7 +6,7 @@
   <!-- Project Coordinates -->
   <groupId>com.simulogix.example</groupId>
   <artifactId>sample-app</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <!-- Metadata -->
@@ -44,7 +44,13 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.19.2</version>
+      <version>2.19.4</version>
+    </dependency>
+
+     <dependency>
+      <groupId>common-lang3</groupId>
+      <artifactId>common-lang3</artifactId>
+      <version>3.17.2</version>
     </dependency>
 
 
