--- a/playbooks/enforce_pom.yml
+++ b/playbooks/enforce_pom.yml
@@ -62,7 +62,7 @@
 
   roles:
     - { role: pom_reader, tags: ['pom_reader'] }
-    # - pom_project_updater
+    - pom_project_updater
     # - pom_deps_updater
-    - role: pom_plugin_updater
+    # - pom_plugin_updater
 
